style(vscode): 隐藏装饰概览标尺的 canvas
为使编辑器侧边栏更简洁，去除装饰概览标尺占用的宽度。
将 canvas.decorationsOverviewRuler 的宽度、最小宽度和最大宽度均设为 0，防止布局偏移。

--- a/custom-vscode.css
+++ b/custom-vscode.css
@@ -262,3 +262,9 @@
     background-size: contain !important;
     width: 60% !important;
 }
+
+canvas.decorationsOverviewRuler {
+  width: 0px !important;
+  min-width: 0px !important;
+  max-width: 0px !important;
+}
