--- a/custom-vscode.css
+++ b/custom-vscode.css
@@ -268,3 +268,13 @@ canvas.decorationsOverviewRuler {
   min-width: 0px !important;
   max-width: 0px !important;
 }
+
+/* 状态栏左端：给第一个 item 加左 padding */
+.monaco-workbench .part.statusbar > .items-container > .statusbar-item.left.first-visible-item {
+  padding-left: 10px !important;
+}
+
+/* 状态栏右端：给最后一个 item 加右 padding */
+.monaco-workbench .part.statusbar > .items-container > .statusbar-item.right.last-visible-item {
+  padding-right: 10px !important;
+}
