--- a/custom-vscode.css
+++ b/custom-vscode.css
@@ -115,7 +115,7 @@
     position: absolute !important;
     right: 1px !important;
     width: 1px !important;
-    background: #bc9abc !important;
+    background: #FF8F40 !important;
     left: auto !important;
 }
 
